# bane

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  bootstrap.sh  conanfile.txt  docker-cmd.sh  docker-compose.yml  mymake  todo.txt
docker/: bashrc_fragment
src/: main.cpp
src/lib/: app.cpp  app.h  button.cpp  button.h  button_group.cpp  button_group.h  checkbox.cpp  checkbox.h  color_pair.cpp  color_pair.h  env.cpp  env.h  event.cpp  event.h  event_handler.cpp  event_handler.h  h_box_layout_mgr.cpp  h_box_layout_mgr.h  h_line.cpp  h_line.h  label.cpp  label.h  layout_mgr.cpp  layout_mgr.h  line_edit.cpp  line_edit.h  logging.cpp  logging.h  ncurses_wrapper.h  pane.cpp  pane.h  push_button.cpp  push_button.h  radio_button.cpp  radio_button.h  screen.cpp  screen.h  simple_layout_mgr.cpp  simple_layout_mgr.h  stateful_button.cpp  (+15 more)
src/lib/button/: button.cpp  button.h
src/lib/event/: custom_event.cpp  custom_event.h  dummy_event.cpp  dummy_event.h  event.cpp  event.h  event_handler.cpp  event_handler.h  key_event.cpp  key_event.h  mouse_event.cpp  mouse_event.h  position_event.cpp  position_event.h  resize_event.cpp  resize_event.h
src/lib/mvc/: controller.cpp  controller.h  controller.hpp  model.cpp  model.h  view.cpp  view.h  view.hpp
src/lib/term/: ncurses_term_window.cpp  ncurses_term_window.h  term_window.cpp  term_window.h
